--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,48 +1,6 @@
-name: Build and Release
-
-on:
-  workflow_dispatch:
-  push:
-    tags:
-      - 'v*'
-
 jobs:
-  build-windows:
-    runs-on: windows-latest  # Utilise un runner Windows
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'  # Spécifie la version Python requise
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pyinstaller
-
-    - name: Build executable with PyInstaller (Windows)
-      run: |
-        pyinstaller -F --icon=".\\assets\\icon.ico" --add-data ".\\assets\\icon.ico;assets" ./main.pyw
-      shell: pwsh
-
-    - name: Rename executable for Windows
-      run: |
-        ren dist\\main.exe main-windows.exe
-      shell: pwsh
-
-    - name: Upload Windows executable as artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: executable-windows
-        path: dist\\main-windows.exe
-      
   build-linux:
-    runs-on: ubuntu-latest  # Utilise un runner Ubuntu
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
@@ -51,7 +9,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'  # Spécifie la version Python requise
+        python-version: '3.x'
 
     - name: Install dependencies
       run: |
@@ -64,6 +22,10 @@ jobs:
         pyinstaller -F --icon="./assets/icon.png" --add-data "./assets/icon.png:assets" ./main.pyw
       shell: bash
 
+    - name: Verify artifact creation
+      run: ls -la dist/
+      shell: bash
+
     - name: Rename executable for Linux
       run: |
         mv dist/main main-linux
@@ -74,31 +36,3 @@ jobs:
       with:
         name: executable-linux
         path: dist/main-linux
-
-  release:
-    needs: [build-windows, build-linux]  # Attendre que les jobs de compilation se terminent
-    runs-on: ubuntu-latest  # Ce job se déroule sur un runner Ubuntu, car nous utilisons GitHub Actions pour télécharger les artefacts et créer la release.
-
-    steps:
-    - name: Download Windows executable artifact
-      uses: actions/download-artifact@v3
-      with:
-        name: executable-windows
-        path: ./release
-
-    - name: Download Linux executable artifact
-      uses: actions/download-artifact@v3
-      with:
-        name: executable-linux
-        path: ./release
-
-    - name: Create GitHub Release
-      uses: ncipollo/release-action@v1
-      with:
-        tag: ${{ github.ref_name }}
-        name: Release ${{ github.ref_name }}
-        draft: false
-        prerelease: false
-        files: |
-          ./release/main-linux
-          ./release/main-windows.exe
