--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,40 +1,32 @@
 name: Build and Release
-
 on:
   workflow_dispatch:
   push:
     tags:
       - 'v*'
-
 jobs:
   build-windows:
     runs-on: windows-latest
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pyinstaller
-
     - name: Build executable with PyInstaller (Windows)
       run: |
         pyinstaller -F --icon=".\\assets\\icon.ico" --add-data ".\\assets\\icon.ico;assets" ./main.pyw
       shell: pwsh
-
     - name: Rename executable for Windows
       run: |
         ren dist\\main.exe main-windows.exe
       shell: pwsh
-
     - name: Upload Windows executable as artifact
       uses: actions/upload-artifact@v3
       with:
@@ -43,55 +35,56 @@ jobs:
       
   build-linux:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pyinstaller
-
     - name: Build executable with PyInstaller (Linux)
       run: |
         pyinstaller -F --icon="./assets/icon.png" --add-data "./assets/icon.png:assets" ./main.pyw
       shell: bash
-
     - name: Rename executable for Linux
       run: |
         mv dist/main main-linux
+        chmod +x main-linux
       shell: bash
-
+    - name: List files and check permissions
+      run: |
+        ls -la
+        ls -la main-linux
+      shell: bash
     - name: Upload Linux executable as artifact
       uses: actions/upload-artifact@v3
       with:
         name: executable-linux
-        path: dist/main-linux
-
+        path: main-linux
+        
   release:
     needs: [build-windows, build-linux]
     runs-on: ubuntu-latest
-
     steps:
     - name: Download Windows executable artifact
       uses: actions/download-artifact@v3
       with:
         name: executable-windows
         path: ./release
-
     - name: Download Linux executable artifact
       uses: actions/download-artifact@v3
       with:
         name: executable-linux
         path: ./release
-
+    - name: List release directory contents
+      run: |
+        ls -la ./release
+      shell: bash
     - name: Create GitHub Release
       uses: ncipollo/release-action@v1
       with:
