--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,11 @@ authors = [
 description = "A program to display images and gif on other computers within same network."
 readme = "README.md"
 requires-python = ">=3.8"
+dependencies = [
+    "PyQt5==5.15.11",
+    "PyQt5-Qt5==5.15.2",
+    "PyQt5_sip==12.15.0",
+]
 classifiers = [
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
@@ -15,11 +20,6 @@ classifiers = [
     "Intended Audience :: End Users/Desktop",
     "Topic :: Communications :: Chat",
     "Natural Language :: English",
-]
-dependencies = [
-    "PyQt5==5.15.11",
-    "PyQt5-Qt5==5.15.2",
-    "PyQt5_sip==12.15.0"
 ]
 
 [project.scripts]
